# handrail

./: .env  .env.example  .env.save  .gitignore  .gitleaks.toml  .gitleaksignore  .ns_local_brain.env  ACTIVATION_CHECKLIST.md  ADAPTER_COMPLETE.md  API_REFERENCE.json  ARCHITECTURE_TRUTH.md  ATOMLEX_ARCHITECTURE.md  AXIOLEV_STATE.md  BLACK_STATUS.md  BOOT_EZ.command  CHANGELOG.md  CLAUDE.md  CLOSURE_PROMPT.md  COMPLETION_RECEIPT.md  COMPLETION_VERDICT.md  CONSTITUTIONAL_COMPRESSION.md  DEEP_AUDIT.json  DEPLOYMENT_CHECKLIST.md  Dockerfile.sovereign  FINALIZATION_LEDGER.md  FINAL_ARCHITECTURE_CERTIFICATION.json  FINAL_CERTIFICATION.json  FINAL_CLOSURE_CERTIFICATE.json  FINAL_PRODUCTION_READINESS.md  FINAL_RUNTIME_CERTIFICATION.json  FINAL_STATE.md  FINAL_SYSTEM_TEST.py  FIX_REQUEST.md  FOUNDER_OPERATIONS_MANUAL.md  FOUNDER_PATH_CERTIFICATION.md  FOUNDER_READY_STATE.json  GITHUB_SETUP.md  GREEN_BLACK_MASTER_STATUS.md  GREEN_GO.sh  HANDRAIL_ROLE_DECISION.md  (+80 more)
.cps/: adapter_health.json  boot_and_prove.json  boot_mission_graph.json  health_check.json  ns_boot_v1.json  repo_inspect.json  ring5_verification.json  self_heal.json  sovereign_boot.json
.runbook/: BOOT.md
.runs/: boot_receipts.jsonl  capability_graph.json  ledger_chain.json
.terminal_manager/: final_completion.sh  final_state_max.sh  ns_state_check.sh  ns_state_check_v2.sh
.vercel/: project.json
.verify_artifacts/: RECEIPT.json  REPORT.md  boot.out  preflight.out  verify.out
.yubikey/: quorum.json
apps/ns-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/ns-tauri/src-tauri/src/: main.rs
(+2846 files in other folders)
