[package]
name = "ns-infinity"
version = "1.0.0"
edition = "2021"
description = "NS∞ Founder Operating System"
authors = ["AXIOLEV Holdings LLC"]

[[bin]]
name = "ns-infinity"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
